<resources>
    <string name="app_name">ClaseOnline01_Carrizo</string>
    <string name="ingresar">Ingresar</string>
    <string name="logo_bazar">Logo Bazar</string>
    <string name="bazaristic">Bazaristic</string>
    <string name="inicio_de_sesi_n">Inicio de sesión</string>
    <string name="button">Button</string>
    <string name="ingrese_su_correo">Ingrese su correo</string>
    <string name="ingrese_su_contrase_a">Ingrese su contraseña</string>
    <string name="error_de_ingreso">Error de ingreso</string>
    <string name="aceptar">Aceptar</string>
</resources>