<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/TXT_MAIN_TITULO"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="128dp"
        android:text="@string/bazaristic"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/IMG_MAIN_LOGO"
        android:layout_width="348dp"
        android:layout_height="332dp"
        android:layout_marginTop="152dp"
        android:layout_marginEnd="32dp"
        android:contentDescription="@string/logo_bazar"
        android:scaleType="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/TXT_MAIN_TITULO"
        app:srcCompat="@drawable/bazar_logo_sin_fondo" />

    <Button
        android:id="@+id/BTN_MAIN_INGRESAR"
        android:layout_width="231dp"
        android:layout_height="58dp"
        android:layout_marginTop="120dp"
        android:layout_marginEnd="88dp"
        android:text="@string/ingresar"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        app:cornerRadius="@null"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/IMG_MAIN_LOGO" />

</androidx.constraintlayout.widget.ConstraintLayout>